# qmicroz

./: CMakeLists.txt  README.md  Release Notes.txt
scripts/: make_install.sh  uninstall.sh
src/: qmicroz.cpp  qmicroz.h  qmicroz_global.h  qmztools.cpp  qmztools.h  test_qmicroz.cpp  tools.cpp  tools.h
